--- a/WebServices/Web.config
+++ b/WebServices/Web.config
@@ -17,7 +17,7 @@
     <appSettings/>
   <connectionStrings>
     <add name="TareasMDFLocal"
-         connectionString="Data Source=.\SQLEXPRESS;Database=TareasMDF;Connect Timeout=30;User ID=tareas;Password=tareas2010;User Instance=true;Integrated Security=true;"
+         connectionString="Data Source=.\SQLEXPRESS;Database=TareasMDF;Connect Timeout=30;User ID=tareas;Password=tareas2010;"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
     <system.web>
