--- a/Tareas/web.config
+++ b/Tareas/web.config
@@ -19,12 +19,19 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    
-    <add name="ApplicationServices" 
-         connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\Tareas.mdf;Database=TareasMDF;Connect Timeout=30;User ID=tareas;Password=tareas2010;User Instance=True;Integrated Security=true;" 
+    <!--
+    <add name="ApplicationServices"
+         connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\Tareas.mdf;Database=TareasMDF;Connect Timeout=30;User ID=tareas;Password=tareas2010;User Instance=True;Integrated Security=true;"
          providerName="System.Data.SqlClient" />
-    <add name="TareasMDFLocal" 
-         connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\Tareas.mdf;Database=TareasMDF;Connect Timeout=30;User ID=tareas;Password=tareas2010;User Instance=True;Integrated Security=true;" 
+    <add name="TareasMDFLocal"
+         connectionString="Data Source=.\SQLEXPRESS;AttachDbFilename=|DataDirectory|\Tareas.mdf;Database=TareasMDF;Connect Timeout=30;User ID=tareas;Password=tareas2010;User Instance=True;Integrated Security=true;"
+         providerName="System.Data.SqlClient"/>
+    -->
+    <add name="ApplicationServices"
+         connectionString="Data Source=.\SQLEXPRESS;Database=TareasMDF;Connect Timeout=30;User ID=tareas;Password=tareas2010;"
+         providerName="System.Data.SqlClient" />
+    <add name="TareasMDFLocal"
+         connectionString="Data Source=.\SQLEXPRESS;Database=TareasMDF;Connect Timeout=30;User ID=tareas;Password=tareas2010;"
          providerName="System.Data.SqlClient"/>
     <!--
     <add name="ApplicationServices" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Tareas;User Id=tareas;Password=tareas2010;" providerName="System.Data.SqlClient"/>
