--- a/trunk/Tareas/web.config
+++ b/trunk/Tareas/web.config
@@ -138,7 +138,7 @@
   <applicationSettings>
     <Tareas.Properties.Settings>
       <setting name="Tareas_TareasServices_Backup" serializeAs="String">
-        <value>http://localhost:3579/Backup.asmx</value>
+        <value>http://localhost/WebServices/Backup.asmx</value>
       </setting>
     </Tareas.Properties.Settings>
   </applicationSettings>
